--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,13 +5,13 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇷🇺 俄罗斯联邦-1.78MB/s(Youtube:不良林), server: 213.183.53.221, port: 9010, type: ss, cipher: aes-256-cfb, password: f63gg8EruDnUrmz4}
-  - {name: 🇷🇺 俄罗斯联邦-363.2KB/s(Youtube:不良林), server: 213.183.53.207, port: 9033, type: ss, cipher: aes-256-cfb, password: UTJA57ypk2XKQpnm}
-  - {name: 🇷🇺 俄罗斯联邦-234.1KB/s(Youtube:不良林), server: 213.183.53.221, port: 9053, type: ss, cipher: aes-256-cfb, password: SBM7R883jBmnqe6C}
-  - {name: 保加利亚-889.0KB/s(Youtube:不良林), server: 213.183.63.221, port: 9031, type: ss, cipher: aes-256-cfb, password: BwcAUZk8hUFAkDGN}
-  - {name: 保加利亚-325.7KB/s(Youtube:不良林), server: 213.183.63.221, port: 9056, type: ss, cipher: aes-256-cfb, password: rNBfNuuANFCAk7KB}
+  - {name: 保加利亚-193.6KB/s(Youtube:不良林), server: 213.183.63.217, port: 9024, type: ss, cipher: aes-256-cfb, password: BejrQvtu9sqUeNuZ}
+  - {name: 🇷🇺 俄罗斯联邦-768.4KB/s(Youtube:不良林), server: 213.183.53.179, port: 9059, type: ss, cipher: aes-256-cfb, password: 9XwYyZsK8SNzQDtY}
+  - {name: 🇳🇱 荷兰-262.2KB/s(Youtube:不良林), server: 213.183.59.185, port: 9000, type: ss, cipher: aes-256-cfb, password: a3GFYt36Sm82Vys9}
+  - {name: 🇳🇱 荷兰-191.5KB/s(Youtube:不良林), server: 213.183.59.206, port: 9037, type: ss, cipher: aes-256-cfb, password: TN2YqghxeFDKZfLU}
+  - {name: 保加利亚-203.0KB/s(Youtube:不良林), server: 213.183.63.217, port: 9057, type: ss, cipher: aes-256-cfb, password: wjTugX3ZtHMB9c3Z}
   - {name: 🇺🇸 美国-1.42MB/s(Youtube:不良林), server: 38.114.114.69, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇺🇸 美国-1.53MB/s(Youtube:不良林), server: 38.68.135.19, port: 3389, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-194.6KB/s(Youtube:不良林), server: 38.68.135.19, port: 3389, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇺🇸 美国-1.88MB/s(Youtube:不良林), server: 167.88.61.50, port: 8091, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
   - {name: 🇺🇸 美国-1.02MB/s(Youtube:不良林), server: 38.114.114.69, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
   - {name: 🇺🇸 美国-579.2KB/s(Youtube:不良林), server: 169.197.142.39, port: 8888, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
@@ -21,13 +21,13 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-1.78MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-363.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-234.1KB/s(Youtube:不良林)
-      - 保加利亚-889.0KB/s(Youtube:不良林)
-      - 保加利亚-325.7KB/s(Youtube:不良林)
+      - 保加利亚-193.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-768.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-262.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-191.5KB/s(Youtube:不良林)
+      - 保加利亚-203.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.42MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-194.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.88MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.02MB/s(Youtube:不良林)
       - 🇺🇸 美国-579.2KB/s(Youtube:不良林)
@@ -36,13 +36,13 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇷🇺 俄罗斯联邦-1.78MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-363.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-234.1KB/s(Youtube:不良林)
-      - 保加利亚-889.0KB/s(Youtube:不良林)
-      - 保加利亚-325.7KB/s(Youtube:不良林)
+      - 保加利亚-193.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-768.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-262.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-191.5KB/s(Youtube:不良林)
+      - 保加利亚-203.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.42MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-194.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.88MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.02MB/s(Youtube:不良林)
       - 🇺🇸 美国-579.2KB/s(Youtube:不良林)
@@ -52,13 +52,13 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-1.78MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-363.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-234.1KB/s(Youtube:不良林)
-      - 保加利亚-889.0KB/s(Youtube:不良林)
-      - 保加利亚-325.7KB/s(Youtube:不良林)
+      - 保加利亚-193.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-768.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-262.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-191.5KB/s(Youtube:不良林)
+      - 保加利亚-203.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.42MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-194.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.88MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.02MB/s(Youtube:不良林)
       - 🇺🇸 美国-579.2KB/s(Youtube:不良林)
@@ -72,13 +72,13 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇷🇺 俄罗斯联邦-1.78MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-363.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-234.1KB/s(Youtube:不良林)
-      - 保加利亚-889.0KB/s(Youtube:不良林)
-      - 保加利亚-325.7KB/s(Youtube:不良林)
+      - 保加利亚-193.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-768.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-262.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-191.5KB/s(Youtube:不良林)
+      - 保加利亚-203.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.42MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-194.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.88MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.02MB/s(Youtube:不良林)
       - 🇺🇸 美国-579.2KB/s(Youtube:不良林)
@@ -87,13 +87,13 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-1.78MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-363.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-234.1KB/s(Youtube:不良林)
-      - 保加利亚-889.0KB/s(Youtube:不良林)
-      - 保加利亚-325.7KB/s(Youtube:不良林)
+      - 保加利亚-193.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-768.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-262.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-191.5KB/s(Youtube:不良林)
+      - 保加利亚-203.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.42MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-194.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.88MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.02MB/s(Youtube:不良林)
       - 🇺🇸 美国-579.2KB/s(Youtube:不良林)
@@ -103,13 +103,13 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-1.78MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-363.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-234.1KB/s(Youtube:不良林)
-      - 保加利亚-889.0KB/s(Youtube:不良林)
-      - 保加利亚-325.7KB/s(Youtube:不良林)
+      - 保加利亚-193.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-768.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-262.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-191.5KB/s(Youtube:不良林)
+      - 保加利亚-203.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.42MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-194.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.88MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.02MB/s(Youtube:不良林)
       - 🇺🇸 美国-579.2KB/s(Youtube:不良林)
@@ -128,13 +128,13 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-1.78MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-363.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-234.1KB/s(Youtube:不良林)
-      - 保加利亚-889.0KB/s(Youtube:不良林)
-      - 保加利亚-325.7KB/s(Youtube:不良林)
+      - 保加利亚-193.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-768.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-262.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-191.5KB/s(Youtube:不良林)
+      - 保加利亚-203.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.42MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-194.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.88MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.02MB/s(Youtube:不良林)
       - 🇺🇸 美国-579.2KB/s(Youtube:不良林)
