--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 保加利亚-193.6KB/s(Youtube:不良林), server: 213.183.63.217, port: 9024, type: ss, cipher: aes-256-cfb, password: BejrQvtu9sqUeNuZ}
-  - {name: 🇷🇺 俄罗斯联邦-768.4KB/s(Youtube:不良林), server: 213.183.53.179, port: 9059, type: ss, cipher: aes-256-cfb, password: 9XwYyZsK8SNzQDtY}
-  - {name: 🇳🇱 荷兰-262.2KB/s(Youtube:不良林), server: 213.183.59.185, port: 9000, type: ss, cipher: aes-256-cfb, password: a3GFYt36Sm82Vys9}
-  - {name: 🇳🇱 荷兰-191.5KB/s(Youtube:不良林), server: 213.183.59.206, port: 9037, type: ss, cipher: aes-256-cfb, password: TN2YqghxeFDKZfLU}
-  - {name: 保加利亚-203.0KB/s(Youtube:不良林), server: 213.183.63.217, port: 9057, type: ss, cipher: aes-256-cfb, password: wjTugX3ZtHMB9c3Z}
-  - {name: 🇺🇸 美国-1.42MB/s(Youtube:不良林), server: 38.114.114.69, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇺🇸 美国-194.6KB/s(Youtube:不良林), server: 38.68.135.19, port: 3389, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇺🇸 美国-1.88MB/s(Youtube:不良林), server: 167.88.61.50, port: 8091, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
-  - {name: 🇺🇸 美国-1.02MB/s(Youtube:不良林), server: 38.114.114.69, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇺🇸 美国-579.2KB/s(Youtube:不良林), server: 169.197.142.39, port: 8888, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 保加利亚-325.7KB/s(Youtube:不良林), server: 213.183.63.221, port: 9056, type: ss, cipher: aes-256-cfb, password: rNBfNuuANFCAk7KB}
+  - {name: 🇷🇺 俄罗斯联邦-214.2KB/s(Youtube:不良林), server: 213.183.53.198, port: 9093, type: ss, cipher: aes-256-cfb, password: wfLC2y7rzZyCmuyt}
+  - {name: 🇷🇺 俄罗斯联邦-196.4KB/s(Youtube:不良林), server: 213.183.53.207, port: 9030, type: ss, cipher: aes-256-cfb, password: GeregetR8cvQHzYr}
+  - {name: 🇨🇳 (已存活1天)中国-8.37MB/s(Youtube:不良林), server: 116.129.254.47, port: 3389, type: trojan, password: c3c448da2363a6f7, skip-cert-verify: true}
+  - {name: 保加利亚-439.5KB/s(Youtube:不良林), server: 213.183.63.221, port: 9011, type: ss, cipher: aes-256-cfb, password: M3t2ZEQcMGRWBjRa}
+  - {name: 🇩🇪 德国-240.3KB/s(Youtube:不良林), server: 5.183.179.137, port: 9010, type: ss, cipher: aes-256-cfb, password: f63gg8EruDnUrmz4}
+  - {name: 🇩🇪 德国-221.5KB/s(Youtube:不良林), server: 5.183.179.137, port: 9064, type: ss, cipher: aes-256-cfb, password: cp8pRSUAyLhTfVWH}
+  - {name: 🇩🇪 德国-204.8KB/s(Youtube:不良林), server: 5.183.179.137, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
+  - {name: 🇩🇪 德国-213.0KB/s(Youtube:不良林), server: 5.183.179.137, port: 9027, type: ss, cipher: aes-256-cfb, password: EXN3S3eQpjE7EJu8}
+  - {name: 🇩🇪 德国-257.2KB/s(Youtube:不良林), server: 5.183.179.137, port: 9042, type: ss, cipher: aes-256-cfb, password: S7KwUu7yBy58S3Ga}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 保加利亚-193.6KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-768.4KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-262.2KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-191.5KB/s(Youtube:不良林)
-      - 保加利亚-203.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.42MB/s(Youtube:不良林)
-      - 🇺🇸 美国-194.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.88MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-579.2KB/s(Youtube:不良林)
+      - 保加利亚-325.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-214.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-196.4KB/s(Youtube:不良林)
+      - 🇨🇳 (已存活1天)中国-8.37MB/s(Youtube:不良林)
+      - 保加利亚-439.5KB/s(Youtube:不良林)
+      - 🇩🇪 德国-240.3KB/s(Youtube:不良林)
+      - 🇩🇪 德国-221.5KB/s(Youtube:不良林)
+      - 🇩🇪 德国-204.8KB/s(Youtube:不良林)
+      - 🇩🇪 德国-213.0KB/s(Youtube:不良林)
+      - 🇩🇪 德国-257.2KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 保加利亚-193.6KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-768.4KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-262.2KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-191.5KB/s(Youtube:不良林)
-      - 保加利亚-203.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.42MB/s(Youtube:不良林)
-      - 🇺🇸 美国-194.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.88MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-579.2KB/s(Youtube:不良林)
+      - 保加利亚-325.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-214.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-196.4KB/s(Youtube:不良林)
+      - 🇨🇳 (已存活1天)中国-8.37MB/s(Youtube:不良林)
+      - 保加利亚-439.5KB/s(Youtube:不良林)
+      - 🇩🇪 德国-240.3KB/s(Youtube:不良林)
+      - 🇩🇪 德国-221.5KB/s(Youtube:不良林)
+      - 🇩🇪 德国-204.8KB/s(Youtube:不良林)
+      - 🇩🇪 德国-213.0KB/s(Youtube:不良林)
+      - 🇩🇪 德国-257.2KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 保加利亚-193.6KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-768.4KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-262.2KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-191.5KB/s(Youtube:不良林)
-      - 保加利亚-203.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.42MB/s(Youtube:不良林)
-      - 🇺🇸 美国-194.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.88MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-579.2KB/s(Youtube:不良林)
+      - 保加利亚-325.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-214.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-196.4KB/s(Youtube:不良林)
+      - 🇨🇳 (已存活1天)中国-8.37MB/s(Youtube:不良林)
+      - 保加利亚-439.5KB/s(Youtube:不良林)
+      - 🇩🇪 德国-240.3KB/s(Youtube:不良林)
+      - 🇩🇪 德国-221.5KB/s(Youtube:不良林)
+      - 🇩🇪 德国-204.8KB/s(Youtube:不良林)
+      - 🇩🇪 德国-213.0KB/s(Youtube:不良林)
+      - 🇩🇪 德国-257.2KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 保加利亚-193.6KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-768.4KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-262.2KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-191.5KB/s(Youtube:不良林)
-      - 保加利亚-203.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.42MB/s(Youtube:不良林)
-      - 🇺🇸 美国-194.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.88MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-579.2KB/s(Youtube:不良林)
+      - 保加利亚-325.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-214.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-196.4KB/s(Youtube:不良林)
+      - 🇨🇳 (已存活1天)中国-8.37MB/s(Youtube:不良林)
+      - 保加利亚-439.5KB/s(Youtube:不良林)
+      - 🇩🇪 德国-240.3KB/s(Youtube:不良林)
+      - 🇩🇪 德国-221.5KB/s(Youtube:不良林)
+      - 🇩🇪 德国-204.8KB/s(Youtube:不良林)
+      - 🇩🇪 德国-213.0KB/s(Youtube:不良林)
+      - 🇩🇪 德国-257.2KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 保加利亚-193.6KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-768.4KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-262.2KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-191.5KB/s(Youtube:不良林)
-      - 保加利亚-203.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.42MB/s(Youtube:不良林)
-      - 🇺🇸 美国-194.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.88MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-579.2KB/s(Youtube:不良林)
+      - 保加利亚-325.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-214.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-196.4KB/s(Youtube:不良林)
+      - 🇨🇳 (已存活1天)中国-8.37MB/s(Youtube:不良林)
+      - 保加利亚-439.5KB/s(Youtube:不良林)
+      - 🇩🇪 德国-240.3KB/s(Youtube:不良林)
+      - 🇩🇪 德国-221.5KB/s(Youtube:不良林)
+      - 🇩🇪 德国-204.8KB/s(Youtube:不良林)
+      - 🇩🇪 德国-213.0KB/s(Youtube:不良林)
+      - 🇩🇪 德国-257.2KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 保加利亚-193.6KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-768.4KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-262.2KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-191.5KB/s(Youtube:不良林)
-      - 保加利亚-203.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.42MB/s(Youtube:不良林)
-      - 🇺🇸 美国-194.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.88MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-579.2KB/s(Youtube:不良林)
+      - 保加利亚-325.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-214.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-196.4KB/s(Youtube:不良林)
+      - 🇨🇳 (已存活1天)中国-8.37MB/s(Youtube:不良林)
+      - 保加利亚-439.5KB/s(Youtube:不良林)
+      - 🇩🇪 德国-240.3KB/s(Youtube:不良林)
+      - 🇩🇪 德国-221.5KB/s(Youtube:不良林)
+      - 🇩🇪 德国-204.8KB/s(Youtube:不良林)
+      - 🇩🇪 德国-213.0KB/s(Youtube:不良林)
+      - 🇩🇪 德国-257.2KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 保加利亚-193.6KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-768.4KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-262.2KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-191.5KB/s(Youtube:不良林)
-      - 保加利亚-203.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.42MB/s(Youtube:不良林)
-      - 🇺🇸 美国-194.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.88MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-579.2KB/s(Youtube:不良林)
+      - 保加利亚-325.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-214.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-196.4KB/s(Youtube:不良林)
+      - 🇨🇳 (已存活1天)中国-8.37MB/s(Youtube:不良林)
+      - 保加利亚-439.5KB/s(Youtube:不良林)
+      - 🇩🇪 德国-240.3KB/s(Youtube:不良林)
+      - 🇩🇪 德国-221.5KB/s(Youtube:不良林)
+      - 🇩🇪 德国-204.8KB/s(Youtube:不良林)
+      - 🇩🇪 德国-213.0KB/s(Youtube:不良林)
+      - 🇩🇪 德国-257.2KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
