--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 保加利亚-325.7KB/s(Youtube:不良林), server: 213.183.63.221, port: 9056, type: ss, cipher: aes-256-cfb, password: rNBfNuuANFCAk7KB}
+  - {name: 🇨🇦 加拿大-356.0KB/s(Youtube:不良林), server: 198.57.27.225, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
   - {name: 🇷🇺 俄罗斯联邦-214.2KB/s(Youtube:不良林), server: 213.183.53.198, port: 9093, type: ss, cipher: aes-256-cfb, password: wfLC2y7rzZyCmuyt}
-  - {name: 🇷🇺 俄罗斯联邦-196.4KB/s(Youtube:不良林), server: 213.183.53.207, port: 9030, type: ss, cipher: aes-256-cfb, password: GeregetR8cvQHzYr}
-  - {name: 🇨🇳 (已存活1天)中国-8.37MB/s(Youtube:不良林), server: 116.129.254.47, port: 3389, type: trojan, password: c3c448da2363a6f7, skip-cert-verify: true}
-  - {name: 保加利亚-439.5KB/s(Youtube:不良林), server: 213.183.63.221, port: 9011, type: ss, cipher: aes-256-cfb, password: M3t2ZEQcMGRWBjRa}
-  - {name: 🇩🇪 德国-240.3KB/s(Youtube:不良林), server: 5.183.179.137, port: 9010, type: ss, cipher: aes-256-cfb, password: f63gg8EruDnUrmz4}
-  - {name: 🇩🇪 德国-221.5KB/s(Youtube:不良林), server: 5.183.179.137, port: 9064, type: ss, cipher: aes-256-cfb, password: cp8pRSUAyLhTfVWH}
-  - {name: 🇩🇪 德国-204.8KB/s(Youtube:不良林), server: 5.183.179.137, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
-  - {name: 🇩🇪 德国-213.0KB/s(Youtube:不良林), server: 5.183.179.137, port: 9027, type: ss, cipher: aes-256-cfb, password: EXN3S3eQpjE7EJu8}
-  - {name: 🇩🇪 德国-257.2KB/s(Youtube:不良林), server: 5.183.179.137, port: 9042, type: ss, cipher: aes-256-cfb, password: S7KwUu7yBy58S3Ga}
+  - {name: 🇩🇪 德国-223.7KB/s(Youtube:不良林), server: 5.183.179.137, port: 9093, type: ss, cipher: aes-256-cfb, password: wfLC2y7rzZyCmuyt}
+  - {name: 🇺🇸 美国-3.50MB/s(Youtube:不良林), server: 38.114.114.69, port: 8000, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇦🇺 澳大利亚-694.2KB/s(Youtube:不良林), server: 185.167.117.171, port: 9040, type: ss, cipher: aes-256-cfb, password: p9z5BVADH2YFs3MN}
+  - {name: 🇦🇺 澳大利亚-254.8KB/s(Youtube:不良林), server: 185.167.117.171, port: 9079, type: ss, cipher: aes-256-cfb, password: TPqX8edgbAURcAMb}
+  - {name: 🇦🇺 澳大利亚-758.2KB/s(Youtube:不良林), server: 185.167.117.171, port: 9046, type: ss, cipher: aes-256-cfb, password: NvS8N4Vf8qAGPSCL}
+  - {name: 🇦🇺 澳大利亚-345.2KB/s(Youtube:不良林), server: 185.167.117.171, port: 9037, type: ss, cipher: aes-256-cfb, password: TN2YqghxeFDKZfLU}
+  - {name: 🇦🇺 澳大利亚-1.03MB/s(Youtube:不良林), server: 185.167.117.171, port: 9088, type: ss, cipher: aes-256-cfb, password: f8npKgNzdkss2ytn}
+  - {name: 🇦🇺 澳大利亚-340.5KB/s(Youtube:不良林), server: 185.167.117.171, port: 9060, type: ss, cipher: aes-256-cfb, password: ueLXVkvh4hckhErQ}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 保加利亚-325.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-356.0KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-214.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-196.4KB/s(Youtube:不良林)
-      - 🇨🇳 (已存活1天)中国-8.37MB/s(Youtube:不良林)
-      - 保加利亚-439.5KB/s(Youtube:不良林)
-      - 🇩🇪 德国-240.3KB/s(Youtube:不良林)
-      - 🇩🇪 德国-221.5KB/s(Youtube:不良林)
-      - 🇩🇪 德国-204.8KB/s(Youtube:不良林)
-      - 🇩🇪 德国-213.0KB/s(Youtube:不良林)
-      - 🇩🇪 德国-257.2KB/s(Youtube:不良林)
+      - 🇩🇪 德国-223.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.50MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-694.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-254.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-758.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-345.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.03MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-340.5KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 保加利亚-325.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-356.0KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-214.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-196.4KB/s(Youtube:不良林)
-      - 🇨🇳 (已存活1天)中国-8.37MB/s(Youtube:不良林)
-      - 保加利亚-439.5KB/s(Youtube:不良林)
-      - 🇩🇪 德国-240.3KB/s(Youtube:不良林)
-      - 🇩🇪 德国-221.5KB/s(Youtube:不良林)
-      - 🇩🇪 德国-204.8KB/s(Youtube:不良林)
-      - 🇩🇪 德国-213.0KB/s(Youtube:不良林)
-      - 🇩🇪 德国-257.2KB/s(Youtube:不良林)
+      - 🇩🇪 德国-223.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.50MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-694.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-254.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-758.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-345.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.03MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-340.5KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 保加利亚-325.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-356.0KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-214.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-196.4KB/s(Youtube:不良林)
-      - 🇨🇳 (已存活1天)中国-8.37MB/s(Youtube:不良林)
-      - 保加利亚-439.5KB/s(Youtube:不良林)
-      - 🇩🇪 德国-240.3KB/s(Youtube:不良林)
-      - 🇩🇪 德国-221.5KB/s(Youtube:不良林)
-      - 🇩🇪 德国-204.8KB/s(Youtube:不良林)
-      - 🇩🇪 德国-213.0KB/s(Youtube:不良林)
-      - 🇩🇪 德国-257.2KB/s(Youtube:不良林)
+      - 🇩🇪 德国-223.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.50MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-694.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-254.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-758.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-345.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.03MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-340.5KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 保加利亚-325.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-356.0KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-214.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-196.4KB/s(Youtube:不良林)
-      - 🇨🇳 (已存活1天)中国-8.37MB/s(Youtube:不良林)
-      - 保加利亚-439.5KB/s(Youtube:不良林)
-      - 🇩🇪 德国-240.3KB/s(Youtube:不良林)
-      - 🇩🇪 德国-221.5KB/s(Youtube:不良林)
-      - 🇩🇪 德国-204.8KB/s(Youtube:不良林)
-      - 🇩🇪 德国-213.0KB/s(Youtube:不良林)
-      - 🇩🇪 德国-257.2KB/s(Youtube:不良林)
+      - 🇩🇪 德国-223.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.50MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-694.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-254.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-758.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-345.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.03MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-340.5KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 保加利亚-325.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-356.0KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-214.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-196.4KB/s(Youtube:不良林)
-      - 🇨🇳 (已存活1天)中国-8.37MB/s(Youtube:不良林)
-      - 保加利亚-439.5KB/s(Youtube:不良林)
-      - 🇩🇪 德国-240.3KB/s(Youtube:不良林)
-      - 🇩🇪 德国-221.5KB/s(Youtube:不良林)
-      - 🇩🇪 德国-204.8KB/s(Youtube:不良林)
-      - 🇩🇪 德国-213.0KB/s(Youtube:不良林)
-      - 🇩🇪 德国-257.2KB/s(Youtube:不良林)
+      - 🇩🇪 德国-223.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.50MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-694.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-254.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-758.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-345.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.03MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-340.5KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 保加利亚-325.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-356.0KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-214.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-196.4KB/s(Youtube:不良林)
-      - 🇨🇳 (已存活1天)中国-8.37MB/s(Youtube:不良林)
-      - 保加利亚-439.5KB/s(Youtube:不良林)
-      - 🇩🇪 德国-240.3KB/s(Youtube:不良林)
-      - 🇩🇪 德国-221.5KB/s(Youtube:不良林)
-      - 🇩🇪 德国-204.8KB/s(Youtube:不良林)
-      - 🇩🇪 德国-213.0KB/s(Youtube:不良林)
-      - 🇩🇪 德国-257.2KB/s(Youtube:不良林)
+      - 🇩🇪 德国-223.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.50MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-694.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-254.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-758.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-345.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.03MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-340.5KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 保加利亚-325.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-356.0KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-214.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-196.4KB/s(Youtube:不良林)
-      - 🇨🇳 (已存活1天)中国-8.37MB/s(Youtube:不良林)
-      - 保加利亚-439.5KB/s(Youtube:不良林)
-      - 🇩🇪 德国-240.3KB/s(Youtube:不良林)
-      - 🇩🇪 德国-221.5KB/s(Youtube:不良林)
-      - 🇩🇪 德国-204.8KB/s(Youtube:不良林)
-      - 🇩🇪 德国-213.0KB/s(Youtube:不良林)
-      - 🇩🇪 德国-257.2KB/s(Youtube:不良林)
+      - 🇩🇪 德国-223.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.50MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-694.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-254.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-758.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-345.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.03MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-340.5KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
